# AlgoBox

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  SegmentTreeExample.cpp
include/: CMakeLists.txt  stl.cppm
include/data_structure/: SegmentTree.h
src/data_structures/: SegmentTree.cpp
src/data_structures/Tree/: CMakeLists.txt  SegmentTree.cpp  SegmentTree.cppm
test/: SegmentTreeTest.cpp  a.out
